<resources>
    <string name="app_name">Fund Pool</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_link_login">Log In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="LoremIpsum">Lorem Ipsum</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">My Pools</string>
    <string name="tab_text_2">Search</string>
    <string name="tab_text_3">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Create">CREATING NEW COMMITTE</string>
    <string name="password">Password</string>
    <string name="CNIC">CNIC</string>
    <string name="phonenumber">Phone Number</string>
    <string name="Committe_name">Committee Name</string>
    <string name="Member_count">Number of Members Allowed</string>
    <string name="btn_create">Create</string>
    <string name="committe_amount">Amount in PKR</string>
    <string name="create_startDate">Start Date</string>
    <string name="create_month">Total Months</string>
    <string name="searchInputCommitteeName">Committee Name</string>
    <string name="btn_search">Search</string>
    <string name="title_activity_myProfile">My Profile</string>
    <string name="Label_Register">RegisterActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="btn_verify">Verify</string>
    <string name="Verify_Text_Display">4 digit code was sent to your phone. Kindly enter the code to Verify.</string>
    <string name="searchInputCommitteeID">Committe ID</string>
    <string name="search_result_c_name">Owner Name: </string>
    <string name="search_result_c_id">Committee ID: </string>
    <string name="search_result_owner_name">Owner Name: </string>
    <string name="search_result_amount">Amount:</string>
    <string name="search_result_participants">Participants: </string>
    <string name="search_result_duration">Months: </string>
    <string name="search_result_start_date">Start Date: </string>
    <string name="search_result_btn_join">Join</string>
    <string name="search_result_btn_view_participants">View Participants</string>
    <string name="MD_name">Name:</string>
    <string name="MD_id">ID:</string>
    <string name="MD_level">Level:</string>
    <string name="RVS_name">Committe Name:</string>
    <string name="RVS_id">Committe ID:</string>
    <string name="RVS_owner">Creator Name:</string>
</resources>
